[gd_scene load_steps=4 format=3 uid="uid://3js4p4nqaiqx"]

[ext_resource type="Script" path="res://Scenes/script/Memory.gd" id="1_2p5rd"]
[ext_resource type="Theme" uid="uid://6i77j1mvvgk8" path="res://theme.tres" id="1_3csa3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vc68w"]
draw_center = false
border_width_top = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 0.423529)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Memory" type="Control" groups=["memory"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2p5rd")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(300, 426)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -205.0
offset_right = 150.0
offset_bottom = 271.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3csa3")

[node name="Panel" type="Panel" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 20

[node name="ProcessContainer" type="VBoxContainer" parent="PanelContainer/Panel/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 162.07)
layout_mode = 2
theme_override_constants/separation = 60

[node name="MarginContainer3" type="MarginContainer" parent="PanelContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = -10

[node name="HSeparator" type="HSeparator" parent="PanelContainer/Panel/VBoxContainer/MarginContainer3"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_vc68w")

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 20

[node name="BlockedProcessContainer" type="VBoxContainer" parent="PanelContainer/Panel/VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(0, 162.07)
layout_mode = 2
theme_override_constants/separation = 60

[node name="ProcessInExecution" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 71.0
offset_right = 20.0
offset_bottom = 111.0
grow_horizontal = 2
